# Pattern-Discovery-Lab

./: .coverage  .env.example  pyproject.toml  pytest.ini  requirements.txt  test_run.py
configs/: development.yaml
data/raw/: RELIANCE.NS.parquet  RELIANCE.NS_raw.parquet
docs/: README.md
experiments/EXP-000002/: audit.json  raw_data.parquet
src/common/: interfaces.py
src/data_engine/: __init__.py  audit.py  config.py  context.py  engine.py  exceptions.py  types.py
src/data_engine/config/: settings.py
src/data_engine/downloaders/: base.py  yahoo.py
src/data_engine/standardizers/: base.py  yahoo.py
src/data_engine/storage/: base.py  parquet.py
src/data_engine/validators/: base.py  date.py  duplicate.py  missing_data.py  pipeline.py  price.py  report.py  volume.py
src/experiment/: __init__.py  batch.py  catalog.py  context.py  interfaces.py  manager.py  registry.py  state.py  tracker.py
tests/data_engine/: test_standardizer.py  test_validator.py
workspaces/alpha_core_test/EXP-000001/: experiment.yaml  manifest.json  market_data.parquet
workspaces/alpha_core_test/EXP-000002/: experiment.yaml  manifest.json  market_data.parquet
workspaces/cache_test_workspace/EXP-000001/: experiment.yaml  manifest.json  raw_data.parquet
workspaces/cache_test_workspace/EXP-000002/: experiment.yaml  manifest.json  market_data.parquet
workspaces/cache_test_workspace/EXP-000003/: experiment.yaml  manifest.json  raw_data.parquet
workspaces/large_cap_momentum/EXP-000001/: experiment.yaml  manifest.json  raw_data.parquet
(+16 files in other folders)
