[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-discovery-lab"
version = "0.1.0"
description = "AI-powered factor research and backtesting system for equity markets."
authors = [{ name = "Om Chavada" }]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "yfinance",
    "pyarrow"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
